MDEV-28319: Assertion `cur_step->type & JSON_PATH_KEY' failed in json_find_path

Analysis: When trying to find path and handling the match for path,
value at current index is not set to 0 for array_counters. This causes wrong
current step value which eventually causes wrong cur_step->type value.
Fix: Set the value at current index for array_counters to 0.